erDiagram
    %% --- RELATIONSHIPS ---
    USERS ||--o| CUSTOMERS : "is"
    USERS ||--o| EMPLOYEES : "is"
    CATEGORIES ||--o{ PRODUCTS : "contains"
    PRODUCTS ||--o{ SALES_DETAILS : "included_in"
    SALES ||--o{ SALES_DETAILS : "has"
    CUSTOMERS ||--o{ SALES : "buys"
    EMPLOYEES ||--o{ SALES : "processes"
    PRODUCTS ||--o{ INVENTORY : "registered_in"
    
    %% Branch Relationships
    BRANCHES ||--o{ INVENTORY : "manages"
    BRANCHES ||--o{ SALES : "originates_at"
    
    %% Production & Recipes
    PRODUCTS ||--o{ RECIPES : "requires"
    INGREDIENTS ||--o{ RECIPES : "used_in"
    
    %% Purchasing & Suppliers
    SUPPLIERS ||--o{ INGREDIENT_PURCHASES : "supplies"
    INGREDIENTS ||--o{ INGREDIENT_PURCHASES : "bought"

    %% Orders & Tracking
    CUSTOMERS ||--o{ ORDERS : "places"
    ORDERS ||--o{ ORDER_DETAILS : "includes"
    PRODUCTS ||--o{ ORDER_DETAILS : "part_of"

    %% Marketing & Feedback
    PRODUCTS ||--o{ PRODUCT_REVIEWS : "receives"
    CUSTOMERS ||--o{ PRODUCT_REVIEWS : "writes"
    PROMOTIONS ||--o{ SALES : "applied_to"

    %% --- THIRD PARTIAL SECURITY & AUDIT ADDITIONS ---
    USERS ||--o{ STAFF_ACTIVITY_LOG : "performs_actions"
    USERS ||--o{ STAFF_ACCESS_ATTEMPTS : "generates_attempts"

    %% --- DETAILED ENTITIES ---

    USERS {
        int user_id PK
        string username
        string email "Must be @gmail.com / staff handled by personal@mielecita.local"
        string password "Min 12 chars + HIBP filter check"
        string role "Admin, Staff, Client"
        boolean is_active
    }

    CUSTOMERS {
        int customer_id PK
        int user_id FK
        string phone
        string address
        date birth_date
    }

    EMPLOYEES {
        int employee_id PK
        int user_id FK
        int branch_id FK
        string position
        decimal salary
        date hire_date
    }

    BRANCHES {
        int branch_id PK
        string name
        string location
        string phone
    }

    PRODUCTS {
        int product_id PK
        int category_id FK
        string name
        string description
        decimal price "Monitored by Security Definer Trigger"
        string image_url
        string servings "e.g. 10-15 people"
    }

    INGREDIENTS {
        int ingredient_id PK
        string name
        string unit_measure "kg, lt, pza"
        decimal current_cost
    }

    RECIPES {
        int recipe_id PK
        int product_id FK
        int ingredient_id FK
        decimal quantity_required
    }

    INVENTORY {
        int inventory_id PK
        int product_id FK
        int branch_id FK
        int stock "Checked by Stock Triggers"
        int min_stock
    }

    SALES {
        int sale_id PK
        int customer_id FK
        int employee_id FK
        int branch_id FK
        int promotion_id FK
        datetime sale_date
        decimal total_amount
        string payment_type
    }

    SALES_DETAILS {
        int sale_detail_id PK
        int sale_id FK
        int product_id FK
        int quantity
        decimal unit_price
        decimal subtotal
    }

    SUPPLIERS {
        int supplier_id PK
        string name
        string tax_id "RFC"
        string contact_phone
    }

    INGREDIENT_PURCHASES {
        int purchase_id PK
        int supplier_id FK
        int ingredient_id FK
        decimal cost_per_unit
        int quantity
        datetime purchase_date
    }

    PRODUCT_REVIEWS {
        int review_id PK
        int product_id FK
        int customer_id FK
        int rating "1-5 stars"
        string comment
        date review_date
    }

    PROMOTIONS {
        int promotion_id PK
        string name
        decimal discount_percentage
        date start_date
        date end_date
    }

    %% --- NEW THIRD PARTIAL SECURITY ENTITIES ---

    STAFF_ACTIVITY_LOG {
        int log_id PK
        int user_id FK "References staff operator"
        string operation_type "INSERT, UPDATE, DELETE"
        string table_name "e.g. productos, promociones"
        string description "Details previous and new dataset states"
        datetime timestamp
    }

    STAFF_ACCESS_ATTEMPTS {
        int attempt_id PK
        int user_id FK "Can be NULL if anonymous vector"
        string attempted_email
        string ip_address
        string origin_url "CORS validated domain"
        string status "SUCCESS, REJECTED_RLS, INVALID_CREDENTIALS"
        datetime timestamp
    }
